@@ -1,3 +1,8 @@
+2005-02-20  Philippe Gerum  <rpm@xenomai.org>
+
+	* nucleus/pod.c (xnpod_fault_handler): Suspend on XNSUSP instead
+	of XNDORMANT.
+
 2005-02-19  Philippe Gerum  <rpm@xenomai.org>
 
 	* include/nucleus/asm-i386/atomic.h: Define likely()/unlikely()
